feat: Integrate Google Sign-In and refine UI
Integrates Google OAuth for user authentication, streamlining the login process. Enhances the user interface with improved navigation, a custom dark mode scrollbar, and updated dashboard layouts. Adds input validation and error handling to the profile setup page.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PathPilot AI - From Student to Industry-Ready</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; transition: background-color 0.3s, color 0.3s; }
         .dark { color-scheme: dark; }
+        
+        /* Custom scrollbar for better dark mode aesthetics */
+        .dark ::-webkit-scrollbar { width: 8px; }
+        .dark ::-webkit-scrollbar-track { background: #0f172a; }
+        .dark ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
+        .dark ::-webkit-scrollbar-thumb:hover { background: #475569; }
     </style>
     <script>
       tailwind.config = {
